--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,7 +1,25 @@
 version: "2"
 
 linters:
-  default: standard
+  enable:
+    - govet
+    - errcheck
+    - staticcheck
+    - unused
+    - ineffassign
+    - gocritic
+  settings:
+    gocritic:
+      enabled-checks:
+        - dupImport
+        - nestingReduce
+        - unnecessaryBlock
 
-run:
-  timeout: 5m
+formatters:
+  enable:
+    - gofmt
+    - goimports
+
+issues:
+  max-issues-per-linter: 50
+  max-same-issues: 5
