--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,25 +1,3 @@
-version: "2"
-
-linters:
-  enable:
-    - govet
-    - errcheck
-    - staticcheck
-    - unused
-    - ineffassign
-    - gocritic
-  settings:
-    gocritic:
-      enabled-checks:
-        - dupImport
-        - nestingReduce
-        - unnecessaryBlock
-
-formatters:
-  enable:
-    - gofmt
-    - goimports
-
-issues:
-  max-issues-per-linter: 50
-  max-same-issues: 5
+# Minimal config for golangci-lint 1.64+ (no version/default keys)
+run:
+  timeout: 5m
